src/components/App-components/ProjectCard/ProjectCard.module.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");

.projectCardPage {
  margin: 40px 80px;
}

.projectCardContainer {
  position: relative;
  width: 22.78rem;
  height: 14.04rem;
  margin-bottom: 1.25rem;
  cursor: pointer;
  transition: all ease-in-out 0.2s;
}

.projectCardContainer:hover {
  scale: 1.04;
}
.projectCardContainerDisabled {
  position: relative;
  width: 22.78rem;
  height: 14.04rem;
  margin-bottom: 1.25rem;
  filter: grayscale(1);
  cursor: default;
}

.projectCardPicture {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 0.625rem;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.projectCardContent {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 0.625rem;
  box-sizing: border-box;
  background-color: rgba(31, 31, 31, 0.8);
  border-bottom-left-radius: 0.625rem;
  border-bottom-right-radius: 0.625rem;
  color: white;
  font-family: "Montserrat", sans-serif;
  z-index: 1; /* Ensure the text is above the image */
}

.projectRoleStatus {
  position: absolute;
  top: -25%;
  left: 0;
  width: 100%;
  padding: 0.625rem;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
}

.projectRoleStatus span {
  font-size: 0.625rem;
}

.projectStatus {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.1rem 0.5rem;
  border-radius: 0.4rem;
  text-align: center;
}

.blueBackground {
  background-color: #3883ba;
}

.redBackground {
  background-color: #ba3838;
}

.projectRoles {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #7a4f1d;
  padding: 0.1rem 0.5rem;
  border-radius: 0.4rem;
  text-align: center;
}

.projectName {
  margin-top: 0.6rem;
  font-size: 1rem;
}

.projectUsersPR {
  display: flex;
  justify-content: space-between;
  font-size: 0.625rem;
  margin-top: 0.6rem;
}

.projectUsers {
  color: rgba(255, 255, 255, 0.7);
}

.projectPRWaiting {
  background-color: #8938ba;
  border-radius: 0.4rem;
  padding: 0.1rem 0.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.is_pending_info {
  position: absolute;
  right: 20px;
  bottom: 45px;
  background-color: #3883ba;
  padding: 4px 8px;
  border-radius: 10px;
  font-size: 0.8rem;
  filter: grayscale(0);
}

